Travel::Status::DE::IRIS 1.64 - Sun Jan 30 2022

    * Add experimental "new_p" constructor for non-blocking operation with
      Mojo::Promise and Mojo::UserAgent.

Travel::Status::DE::IRIS 1.63 - Mon Jan 24 2022

    * update station database

Travel::Status::DE::IRIS 1.62 - Sun Dec 12 2021

    * import station name changes and removals from Winterfahrplan 2022

Travel::Status::DE::IRIS 1.61 - Sat Oct 23 2021

    * Switch to GIS::Distance(::Fast), as Geo::Distance is deprecated and
      Geo::Distance::XS is no longer available

Travel::Status::DE::IRIS 1.60 - Sun Sep 12 2021

    * Update IRIS station list; remove stations which no longer receive train
      services

Travel::Status::DE::IRIS 1.59 - Sat Aug 14 2021

    * Stations: get_station, get_station_by_name: Return immediately if
      requested station is undef or empty
    * Add stations Menningen-Leitishofen, Meßkirch, Sauldorf, Alvesta station,
      Lund Central, and Stockholm Central

Travel::Status::DE::IRIS 1.58 - Mon Jul 19 2021

    * Result->has_realtime: Fix cancellations not being reported as realtime
    * db-iris: Annotate arrival/departure times which should have realtime
      data, but don't, with a question mark.

Travel::Status::DE::IRIS 1.57 - Sun Jul 18 2021

    * Result: Add arrival_has_realtime, departure_has_realtime, has_realtime
      accessors
    * Result->delay_messages: Leave out superseded messages (right now, the
      only case is "Defekt am Zug" -> "Behobener Defekt am Zug")
    * Stations: Add swiss and austrian stations reachable from Waldshut and
      Lindau

Travel::Status::DE::IRIS 1.56 - Sun Jun 20 2021

    * Update IRIS station list. Adds support for lots of
      Albtal-Verkehrs-Gesellschaft stations around Karlsruhe
    * Update some delay/qos messages ahead of a DB-wide change planned for
      October 2021

Travel::Status::DE::IRIS 1.55 - Tue May 04 2021

    * Fix transfer trains getting lost when requested from a related station.